accelerated-domains: add sunhospital.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76242,6 +76242,7 @@ server=/sunguoqi.com/114.114.114.114
 server=/sunhan.vip/114.114.114.114
 server=/sunhante.com/114.114.114.114
 server=/sunhongs.com/114.114.114.114
+server=/sunhospital.net/114.114.114.114
 server=/sunhuhotel.com/114.114.114.114
 server=/sunhwee.com/114.114.114.114
 server=/suninf.net/114.114.114.114
