--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77256,6 +77256,7 @@ server=/szjawest.com/114.114.114.114
 server=/szjbz.cc/114.114.114.114
 server=/szjcmr.com/114.114.114.114
 server=/szjcyljt.com/114.114.114.114
+server=/szjcyy.com/114.114.114.114
 server=/szjcyyy.com/114.114.114.114
 server=/szjg.net/114.114.114.114
 server=/szjhxjt.com/114.114.114.114
