--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70204,6 +70204,7 @@ server=/ruijienetworks.com/114.114.114.114
 server=/ruijiery.com/114.114.114.114
 server=/ruijinginfo.com/114.114.114.114
 server=/ruijinintl.com/114.114.114.114
+server=/ruijinyy.com/114.114.114.114
 server=/ruikangjinshu.com/114.114.114.114
 server=/ruikesearch.com/114.114.114.114
 server=/ruilinblw.com/114.114.114.114
