accelerated-domains: add wjeryuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85716,6 +85716,7 @@ server=/wjdhcms.com/114.114.114.114
 server=/wjdiy.com/114.114.114.114
 server=/wjdiy.net/114.114.114.114
 server=/wjedu.net/114.114.114.114
+server=/wjeryuan.com/114.114.114.114
 server=/wjfcw.com/114.114.114.114
 server=/wjfilm.com/114.114.114.114
 server=/wjgglm.com/114.114.114.114
