--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41659,6 +41659,7 @@ server=/hosory.com/114.114.114.114
 server=/hosowin.com/114.114.114.114
 server=/hospit.net/114.114.114.114
 server=/hospital-cqmu.com/114.114.114.114
+server=/hospitalkg.com/114.114.114.114
 server=/hospitalshy.com/114.114.114.114
 server=/hospitalstar.com/114.114.114.114
 server=/hospite.com/114.114.114.114
