accelerated-domains: add suzhouhui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76498,6 +76498,7 @@ server=/suzhoucitymarathon.com/114.114.114.114
 server=/suzhouds.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
 server=/suzhouhengtai.com/114.114.114.114
+server=/suzhouhui.com/114.114.114.114
 server=/suzhoujicai.com/114.114.114.114
 server=/suzhouleasing.com/114.114.114.114
 server=/suzhoulida.com/114.114.114.114
