accelerated-domains: add szwzzxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77536,6 +77536,7 @@ server=/szwstui.com/114.114.114.114
 server=/szwtsd.com/114.114.114.114
 server=/szwuyukeji.com/114.114.114.114
 server=/szwwco.com/114.114.114.114
+server=/szwzzxyy.com/114.114.114.114
 server=/szx-ray.com/114.114.114.114
 server=/szxbbus.com/114.114.114.114
 server=/szxbyx.com/114.114.114.114
