accelerated-domains: add szmylike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77373,6 +77373,7 @@ server=/szmtxny.com/114.114.114.114
 server=/szmtzc.com/114.114.114.114
 server=/szmuseum.com/114.114.114.114
 server=/szmwzs.com/114.114.114.114
+server=/szmylike.com/114.114.114.114
 server=/szmynet.com/114.114.114.114
 server=/szmywin.com/114.114.114.114
 server=/szmyxc.com/114.114.114.114
