accelerated-domains: add szsamr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77444,6 +77444,7 @@ server=/szs189.com/114.114.114.114
 server=/szsaibao.com/114.114.114.114
 server=/szsailong.com/114.114.114.114
 server=/szsaiwei.com/114.114.114.114
+server=/szsamr.com/114.114.114.114
 server=/szsamtek.com/114.114.114.114
 server=/szsangbo.com/114.114.114.114
 server=/szschj.com/114.114.114.114
