accelerated-domains: add szgcyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77203,6 +77203,7 @@ server=/szfyhd.com/114.114.114.114
 server=/szfyzb.com/114.114.114.114
 server=/szgalaxy.com/114.114.114.114
 server=/szgcc.com/114.114.114.114
+server=/szgcyy.com/114.114.114.114
 server=/szggzy.com/114.114.114.114
 server=/szghgw.com/114.114.114.114
 server=/szgky.com/114.114.114.114
