accelerated-domains: add szmsjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77369,6 +77369,7 @@ server=/szmjd.com/114.114.114.114
 server=/szmjlcd.com/114.114.114.114
 server=/szmom.com/114.114.114.114
 server=/szmrcd.com/114.114.114.114
+server=/szmsjs.com/114.114.114.114
 server=/szmslaser.com/114.114.114.114
 server=/szmtxny.com/114.114.114.114
 server=/szmtzc.com/114.114.114.114
