accelerated-domains: add szzesee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77608,6 +77608,7 @@ server=/szyyda.com/114.114.114.114
 server=/szyyt.com/114.114.114.114
 server=/szyyx.com/114.114.114.114
 server=/szzbmy.com/114.114.114.114
+server=/szzesee.com/114.114.114.114
 server=/szzfbt.com/114.114.114.114
 server=/szzfgjj.com/114.114.114.114
 server=/szzh365.com/114.114.114.114
