--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43588,6 +43588,7 @@ server=/iblue.com/114.114.114.114
 server=/iblue.me/114.114.114.114
 server=/ibluefrog.com/114.114.114.114
 server=/ibluesocial.com/114.114.114.114
+server=/ibm-dns.com/114.114.114.114
 server=/ibmfwqdl.com/114.114.114.114
 server=/ibmhz.com/114.114.114.114
 server=/ibmwclub.com/114.114.114.114
