accelerated-domains: add yahzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90161,6 +90161,7 @@ server=/yahui.hk/114.114.114.114
 server=/yahuishou.com/114.114.114.114
 server=/yahunet.com/114.114.114.114
 server=/yahxxcl.com/114.114.114.114
+server=/yahzx.com/114.114.114.114
 server=/yaimg.com/114.114.114.114
 server=/yaitest.com/114.114.114.114
 server=/yaiwlt.xyz/114.114.114.114
