--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9303,6 +9303,7 @@ server=/addog.vip/114.114.114.114
 server=/addoom.com/114.114.114.114
 server=/addpv.com/114.114.114.114
 server=/addww.com/114.114.114.114
+server=/ade8.com/114.114.114.114
 server=/adeasyx.com/114.114.114.114
 server=/adeaz.com/114.114.114.114
 server=/adebang.com/114.114.114.114
