accelerated-domains: add adwery.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9432,6 +9432,7 @@ server=/adwangmai.com/114.114.114.114
 server=/adwanji.com/114.114.114.114
 server=/adwebcloud.com/114.114.114.114
 server=/adwep.com/114.114.114.114
+server=/adwery.com/114.114.114.114
 server=/adwetec.com/114.114.114.114
 server=/adwintech.com/114.114.114.114
 server=/adwke.com/114.114.114.114
