--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21137,6 +21137,7 @@ server=/cn0713.com/114.114.114.114
 server=/cn0779.com/114.114.114.114
 server=/cn0851.com/114.114.114.114
 server=/cn0917.com/114.114.114.114
+server=/cn11185.com/114.114.114.114
 server=/cn12365.org/114.114.114.114
 server=/cn168.com/114.114.114.114
 server=/cn18k.com/114.114.114.114
