--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15461,6 +15461,7 @@ server=/bmshow.com/114.114.114.114
 server=/bmvps.com/114.114.114.114
 server=/bmw8033.com/114.114.114.114
 server=/bmwallpaper.com/114.114.114.114
+server=/bmwnc.com/114.114.114.114
 server=/bmwsteelart.com/114.114.114.114
 server=/bmxinfang.com/114.114.114.114
 server=/bmzxw.com/114.114.114.114
