accelerated-domains: add dupingzu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27125,6 +27125,7 @@ server=/duozhuayu.com/114.114.114.114
 server=/duozhuayu.net/114.114.114.114
 server=/duoziwang.com/114.114.114.114
 server=/dup2.org/114.114.114.114
+server=/dupingzu.com/114.114.114.114
 server=/dupola.net/114.114.114.114
 server=/duquge.org/114.114.114.114
 server=/dur9.com/114.114.114.114
