--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30026,6 +30026,7 @@ server=/fdqc.com/114.114.114.114
 server=/fdqfsdhb.cfd/114.114.114.114
 server=/fdttgroup.com/114.114.114.114
 server=/fduggvqeeorp.com/114.114.114.114
+server=/fdx-fund.com/114.114.114.114
 server=/fdxww.com/114.114.114.114
 server=/fdxxjs.com/114.114.114.114
 server=/fdzq.com/114.114.114.114
