--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31522,6 +31522,7 @@ server=/funwear.com/114.114.114.114
 server=/funxun.com/114.114.114.114
 server=/funyard-hotels.com/114.114.114.114
 server=/funyqq.com/114.114.114.114
+server=/fupanwang.com/114.114.114.114
 server=/fupin832.com/114.114.114.114
 server=/fuqi368.com/114.114.114.114
 server=/furagon.com/114.114.114.114
