--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41039,6 +41039,7 @@ server=/honsonch.com/114.114.114.114
 server=/honstarmemory.com/114.114.114.114
 server=/honsuntec.com/114.114.114.114
 server=/hontont.com/114.114.114.114
+server=/honyanwl.com/114.114.114.114
 server=/honycapital.com/114.114.114.114
 server=/honyfunds.com/114.114.114.114
 server=/honyone.com/114.114.114.114
