--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39342,6 +39342,7 @@ server=/heiyunxitong.com/114.114.114.114
 server=/heizhushoes.com/114.114.114.114
 server=/hejiadianshang.com/114.114.114.114
 server=/hejichip.com/114.114.114.114
+server=/hejicut.com/114.114.114.114
 server=/hejiu2016.com/114.114.114.114
 server=/hejizhan.com/114.114.114.114
 server=/hejugroup.com/114.114.114.114
