accelerated-domains: add gzrcqf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37475,6 +37475,7 @@ server=/gzqsts.com/114.114.114.114
 server=/gzqunsheng.com/114.114.114.114
 server=/gzrand.com/114.114.114.114
 server=/gzrch.com/114.114.114.114
+server=/gzrcqf.com/114.114.114.114
 server=/gzrexin.com/114.114.114.114
 server=/gzrishun.com/114.114.114.114
 server=/gzrkt.com/114.114.114.114
