accelerated-domains: add nami.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60019,6 +60019,7 @@ server=/namejin.com/114.114.114.114
 server=/namepre.com/114.114.114.114
 server=/nameserver.fit/114.114.114.114
 server=/namesilodns.com/114.114.114.114
+server=/nami.com/114.114.114.114
 server=/namibiya.com/114.114.114.114
 server=/namibox.com/114.114.114.114
 server=/namichong.com/114.114.114.114
