--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45826,6 +45826,7 @@ server=/iverycloud.com/114.114.114.114
 server=/ivfuture.com/114.114.114.114
 server=/ivideostar.com/114.114.114.114
 server=/iviewui.com/114.114.114.114
+server=/ivinkon.com/114.114.114.114
 server=/ivipi.com/114.114.114.114
 server=/ivistang.com/114.114.114.114
 server=/ivixivi.com/114.114.114.114
