accelerated-domains: add lgcx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53526,6 +53526,7 @@ server=/lg5.com/114.114.114.114
 server=/lgbzj.com/114.114.114.114
 server=/lgcdz.com/114.114.114.114
 server=/lgctshanghai.com/114.114.114.114
+server=/lgcx.com/114.114.114.114
 server=/lgdisplayproduct.com/114.114.114.114
 server=/lgdxtech.com/114.114.114.114
 server=/lgexam.com/114.114.114.114
