accelerated-domains: add qiuxueshe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66758,6 +66758,7 @@ server=/qiuweili.com/114.114.114.114
 server=/qiuwen.wiki/114.114.114.114
 server=/qiuwu.net/114.114.114.114
 server=/qiuxue360.com/114.114.114.114
+server=/qiuxueshe.com/114.114.114.114
 server=/qiuxuezy.com/114.114.114.114
 server=/qiuyewang.com/114.114.114.114
 server=/qiuyexitong.com/114.114.114.114
