--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62086,6 +62086,7 @@ server=/npjzjx.com/114.114.114.114
 server=/nplusgroup.com/114.114.114.114
 server=/nplusgroup.net/114.114.114.114
 server=/npmmirror.com/114.114.114.114
+server=/npmtrend.com/114.114.114.114
 server=/npoall.com/114.114.114.114
 server=/npodevelopment.org/114.114.114.114
 server=/npoll.net/114.114.114.114
