accelerated-domains: add wietone.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84283,6 +84283,7 @@ server=/wicp.vip/114.114.114.114
 server=/wicresoft.com/114.114.114.114
 server=/widgetable.net/114.114.114.114
 server=/widuu.com/114.114.114.114
+server=/wietone.com/114.114.114.114
 server=/wifenxiao.com/114.114.114.114
 server=/wifi.com/114.114.114.114
 server=/wifi188.com/114.114.114.114
