accelerated-domains: add ty-xxl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80047,6 +80047,7 @@ server=/txzing.com/114.114.114.114
 server=/ty-group.net/114.114.114.114
 server=/ty-im.com/114.114.114.114
 server=/ty-tyre.com/114.114.114.114
+server=/ty-xxl.com/114.114.114.114
 server=/ty.ink/114.114.114.114
 server=/ty2y.com/114.114.114.114
 server=/ty3w.net/114.114.114.114
