--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85330,6 +85330,7 @@ server=/wsy400.com/114.114.114.114
 server=/wsy7.com/114.114.114.114
 server=/wsyglngy.com/114.114.114.114
 server=/wsyhn.com/114.114.114.114
+server=/wsyxmall.com/114.114.114.114
 server=/wszwhg.net/114.114.114.114
 server=/wt-tech.com/114.114.114.114
 server=/wt168.com/114.114.114.114
