--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87391,6 +87391,7 @@ server=/xihaiannews.com/114.114.114.114
 server=/xihaianrc.com/114.114.114.114
 server=/xihawan8.com/114.114.114.114
 server=/xihaxueche.com/114.114.114.114
+server=/xihazsww.com/114.114.114.114
 server=/xiherencai.com/114.114.114.114
 server=/xihuan.me/114.114.114.114
 server=/xihusgh.com/114.114.114.114
