--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86149,6 +86149,7 @@ server=/xa9t.com/114.114.114.114
 server=/xaaag.com/114.114.114.114
 server=/xabaotu.com/114.114.114.114
 server=/xabbp.com/114.114.114.114
+server=/xacademy.cc/114.114.114.114
 server=/xacbank.com/114.114.114.114
 server=/xacg.info/114.114.114.114
 server=/xachangda.com/114.114.114.114
