--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93081,6 +93081,7 @@ server=/yowooa.com/114.114.114.114
 server=/yoxiha.com/114.114.114.114
 server=/yoximi.com/114.114.114.114
 server=/yoxmail.com/114.114.114.114
+server=/yoxuba.com/114.114.114.114
 server=/yoxyok.com/114.114.114.114
 server=/yoya.com/114.114.114.114
 server=/yoybuy.com/114.114.114.114
