accelerated-domains: add ybaomall.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90420,6 +90420,7 @@ server=/yba120.com/114.114.114.114
 server=/ybaby.com/114.114.114.114
 server=/ybanj.com/114.114.114.114
 server=/ybaobx.com/114.114.114.114
+server=/ybaomall.com/114.114.114.114
 server=/ybbonpet.com/114.114.114.114
 server=/ybbwy.com/114.114.114.114
 server=/ybbxch.xyz/114.114.114.114
