accelerated-domains: add ycfog.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90502,6 +90502,7 @@ server=/ycdzcc.com/114.114.114.114
 server=/yceshop.com/114.114.114.114
 server=/ycfanglei.com/114.114.114.114
 server=/ycfbapp.com/114.114.114.114
+server=/ycfog.com/114.114.114.114
 server=/ycfqbj.com/114.114.114.114
 server=/ycfybjy.com/114.114.114.114
 server=/ycgame.com/114.114.114.114
