accelerated-domains: add zhumotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96562,6 +96562,7 @@ server=/zhumanggroup.net/114.114.114.114
 server=/zhumengqinziyou.com/114.114.114.114
 server=/zhumengwl.com/114.114.114.114
 server=/zhumingepc.com/114.114.114.114
+server=/zhumotech.com/114.114.114.114
 server=/zhumu.me/114.114.114.114
 server=/zhumulive.com/114.114.114.114
 server=/zhuna.net/114.114.114.114
