--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58566,6 +58566,7 @@ server=/mi-img4.com/114.114.114.114
 server=/mi-img5.com/114.114.114.114
 server=/mi-static.com/114.114.114.114
 server=/mi.com/114.114.114.114
+server=/mi.xn--fiqs8s/114.114.114.114
 server=/mi0.cc/114.114.114.114
 server=/mi1.cc/114.114.114.114
 server=/mi72.net/114.114.114.114
