--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12303,6 +12303,7 @@ server=/awsdns-cn-62.biz/114.114.114.114
 server=/awsdns-cn-62.net/114.114.114.114
 server=/awsdns-cn-63.biz/114.114.114.114
 server=/awsdns-cn-63.net/114.114.114.114
+server=/awsdns-vip.com/114.114.114.114
 server=/awsok.com/114.114.114.114
 server=/awsonamazon.com/114.114.114.114
 server=/awspaas.com/114.114.114.114
