--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77754,6 +77754,7 @@ server=/taijudaquan.com/114.114.114.114
 server=/taijutv.com/114.114.114.114
 server=/taikancnc.com/114.114.114.114
 server=/taikang.com/114.114.114.114
+server=/taikang.xn--ses554g/114.114.114.114
 server=/taikang100.com/114.114.114.114
 server=/taikanginv.com/114.114.114.114
 server=/taikangjsnc.com/114.114.114.114
