accelerated-domains: add deeptrip.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24605,6 +24605,7 @@ server=/deepseek.com/114.114.114.114
 server=/deepsheet.net/114.114.114.114
 server=/deeptechchina.com/114.114.114.114
 server=/deeptrain.net/114.114.114.114
+server=/deeptrip.com/114.114.114.114
 server=/deepvinci.tech/114.114.114.114
 server=/deepvps.com/114.114.114.114
 server=/deer-express.com/114.114.114.114
