accelerated-domains: add leter.io

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53212,6 +53212,7 @@ server=/letao.com/114.114.114.114
 server=/letaofang.net/114.114.114.114
 server=/letaoren.com/114.114.114.114
 server=/letbonchina.com/114.114.114.114
+server=/leter.io/114.114.114.114
 server=/leteuav.com/114.114.114.114
 server=/letfind.com/114.114.114.114
 server=/letianbiji.com/114.114.114.114
