accelerated-domains: add cyzwb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23413,6 +23413,7 @@ server=/cyyz.org/114.114.114.114
 server=/cyzl.com/114.114.114.114
 server=/cyzm.net/114.114.114.114
 server=/cyzs97.com/114.114.114.114
+server=/cyzwb.com/114.114.114.114
 server=/cyzywl.com/114.114.114.114
 server=/cyzzzz.com/114.114.114.114
 server=/cz-huachang.com/114.114.114.114
