--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43171,6 +43171,7 @@ server=/hzjmled.com/114.114.114.114
 server=/hzjndz.com/114.114.114.114
 server=/hzjqhy.com/114.114.114.114
 server=/hzjunglepay.com/114.114.114.114
+server=/hzjuzhi.com/114.114.114.114
 server=/hzjxmd.com/114.114.114.114
 server=/hzjywl.net/114.114.114.114
 server=/hzjzmed.com/114.114.114.114
