--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32543,6 +32543,7 @@ server=/gdxxb.com/114.114.114.114
 server=/gdxy.vip/114.114.114.114
 server=/gdxych.com/114.114.114.114
 server=/gdxycy.com/114.114.114.114
+server=/gdydgj.com/114.114.114.114
 server=/gdygsk.com/114.114.114.114
 server=/gdyilianwang.com/114.114.114.114
 server=/gdyjs.com/114.114.114.114
