accelerated-domains: add cdslsxh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17950,6 +17950,7 @@ server=/cdsjjy.com/114.114.114.114
 server=/cdsjtech.com/114.114.114.114
 server=/cdskdxyy.com/114.114.114.114
 server=/cdsledu.net/114.114.114.114
+server=/cdslsxh.com/114.114.114.114
 server=/cdsme.com/114.114.114.114
 server=/cdsns.com/114.114.114.114
 server=/cdspace.net/114.114.114.114
