accelerated-domains: add itelecloud.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45630,6 +45630,7 @@ server=/itechate.com/114.114.114.114
 server=/itedou.com/114.114.114.114
 server=/iteer.net/114.114.114.114
 server=/itek-training.com/114.114.114.114
+server=/itelecloud.com/114.114.114.114
 server=/itensoft.com/114.114.114.114
 server=/iter168.com/114.114.114.114
 server=/itest.info/114.114.114.114
