--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46737,6 +46737,7 @@ server=/jhonse.com/114.114.114.114
 server=/jhotel-shanghai.com/114.114.114.114
 server=/jhqshfly.com/114.114.114.114
 server=/jhrcbank.com/114.114.114.114
+server=/jhsc201ddd211svds.com/114.114.114.114
 server=/jhscm.com/114.114.114.114
 server=/jhscrm.com/114.114.114.114
 server=/jhsddjd.com/114.114.114.114
