--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80514,6 +80514,7 @@ server=/uincall.com/114.114.114.114
 server=/uincall400.com/114.114.114.114
 server=/uinchat.com/114.114.114.114
 server=/uincom400.com/114.114.114.114
+server=/uino.com/114.114.114.114
 server=/uipaas-assets.com/114.114.114.114
 server=/uipower.com/114.114.114.114
 server=/uiren.net/114.114.114.114
