accelerated-domains: add xgllreport.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86656,6 +86656,7 @@ server=/xgjiefu.com/114.114.114.114
 server=/xgkwx.com/114.114.114.114
 server=/xglgift.com/114.114.114.114
 server=/xglist.com/114.114.114.114
+server=/xgllreport.com/114.114.114.114
 server=/xgllzy.com/114.114.114.114
 server=/xglpa.com/114.114.114.114
 server=/xgn-cy.com/114.114.114.114
