--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3986,6 +3986,7 @@ server=/3gsou.com/114.114.114.114
 server=/3gu.com/114.114.114.114
 server=/3gus.com/114.114.114.114
 server=/3gwoool.com/114.114.114.114
+server=/3h.com/114.114.114.114
 server=/3h1i.com/114.114.114.114
 server=/3h3.com/114.114.114.114
 server=/3h77.com/114.114.114.114
