--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77209,6 +77209,7 @@ server=/tencent-blackboard.com/114.114.114.114
 server=/tencent-cloud.com/114.114.114.114
 server=/tencent-cloud.net/114.114.114.114
 server=/tencent-gf.com/114.114.114.114
+server=/tencent-stock.com/114.114.114.114
 server=/tencent.com.hk/114.114.114.114
 server=/tencent.com/114.114.114.114
 server=/tencent.design/114.114.114.114
