--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70770,6 +70770,7 @@ server=/seo.tm/114.114.114.114
 server=/seo123.net/114.114.114.114
 server=/seo371.com/114.114.114.114
 server=/seo628.com/114.114.114.114
+server=/seo880.com/114.114.114.114
 server=/seobti.com/114.114.114.114
 server=/seocxw.com/114.114.114.114
 server=/seodaniel.com/114.114.114.114
