--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39952,6 +39952,7 @@ server=/high20-playback.com/114.114.114.114
 server=/high21-playback.com/114.114.114.114
 server=/high22-playback.com/114.114.114.114
 server=/high24-playback.com/114.114.114.114
+server=/high25-playback.com/114.114.114.114
 server=/highdigitizing.com/114.114.114.114
 server=/highenergyaerospace.com/114.114.114.114
 server=/highfel.com/114.114.114.114
