--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3422,6 +3422,7 @@ server=/35xss.com/114.114.114.114
 server=/35xt.com/114.114.114.114
 server=/35zww.com/114.114.114.114
 server=/36-7.com/114.114.114.114
+server=/36.cc/114.114.114.114
 server=/36.la/114.114.114.114
 server=/360-g.net/114.114.114.114
 server=/360-game.net/114.114.114.114
