accelerated-domains: add guaguay.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34474,6 +34474,7 @@ server=/gtzy123.com/114.114.114.114
 server=/gu166.com/114.114.114.114
 server=/guabu.com/114.114.114.114
 server=/guaguasheng.com/114.114.114.114
+server=/guaguay.com/114.114.114.114
 server=/guahao-inc.com/114.114.114.114
 server=/guahao.com/114.114.114.114
 server=/guahaoe.com/114.114.114.114
