accelerated-domains: add palmpay-inc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63462,6 +63462,7 @@ server=/palmestore.com/114.114.114.114
 server=/palmexpo.com/114.114.114.114
 server=/palmfungames.com/114.114.114.114
 server=/palmjoys.com/114.114.114.114
+server=/palmpay-inc.com/114.114.114.114
 server=/palmpay.com/114.114.114.114
 server=/palmpk.com/114.114.114.114
 server=/palmtrends.com/114.114.114.114
