--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20125,6 +20125,7 @@ server=/chuantu88.com/114.114.114.114
 server=/chuanxincao.net/114.114.114.114
 server=/chuanye.com/114.114.114.114
 server=/chuanyifu.com/114.114.114.114
+server=/chuanyinet.com/114.114.114.114
 server=/chuanying365.com/114.114.114.114
 server=/chuanying520.com/114.114.114.114
 server=/chuanyinpx.com/114.114.114.114
