accelerated-domains: add dinersgoto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25409,6 +25409,7 @@ server=/dinais.com/114.114.114.114
 server=/dinaite2003.com/114.114.114.114
 server=/dinarspeculator.com/114.114.114.114
 server=/dindin.com/114.114.114.114
+server=/dinersgoto.com/114.114.114.114
 server=/dingbang99.com/114.114.114.114
 server=/dingcaicai.com/114.114.114.114
 server=/dingcooltech.com/114.114.114.114
