--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91923,6 +91923,7 @@ server=/yl-csj.com/114.114.114.114
 server=/yl.ag/114.114.114.114
 server=/yl.vip/114.114.114.114
 server=/yl0008168.com/114.114.114.114
+server=/yl0551.com/114.114.114.114
 server=/yl1001.com/114.114.114.114
 server=/yl9820.com/114.114.114.114
 server=/yladm.com/114.114.114.114
