accelerated-domains: add gxhzkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35799,6 +35799,7 @@ server=/gxhyzixun.com/114.114.114.114
 server=/gxhyzx.net/114.114.114.114
 server=/gxhzgjyy.com/114.114.114.114
 server=/gxhzjsgc.com/114.114.114.114
+server=/gxhzkj.com/114.114.114.114
 server=/gxhzsbwg.com/114.114.114.114
 server=/gxhzsqyg.com/114.114.114.114
 server=/gxhztqt.com/114.114.114.114
