--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13386,6 +13386,7 @@ server=/bbqe.com/114.114.114.114
 server=/bbqk.com/114.114.114.114
 server=/bbqk.net/114.114.114.114
 server=/bbqming.com/114.114.114.114
+server=/bbqpitnorthpark.com/114.114.114.114
 server=/bbqseo.com/114.114.114.114
 server=/bbqwhg.com/114.114.114.114
 server=/bbrmedia.com/114.114.114.114
