--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14130,6 +14130,7 @@ server=/bgxcl.com/114.114.114.114
 server=/bgxu.com/114.114.114.114
 server=/bgyfhh.com/114.114.114.114
 server=/bgyfhyx.com/114.114.114.114
+server=/bgypc.com/114.114.114.114
 server=/bgypsc.com/114.114.114.114
 server=/bgzx365.com/114.114.114.114
 server=/bh-lay.com/114.114.114.114
