--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74363,6 +74363,7 @@ server=/spvtime.com/114.114.114.114
 server=/spwj.com/114.114.114.114
 server=/spyouxi.com/114.114.114.114
 server=/spzs.com/114.114.114.114
+server=/spzyjy.com/114.114.114.114
 server=/sq-ks.com/114.114.114.114
 server=/sq-newstar.com/114.114.114.114
 server=/sq.cc/114.114.114.114
