--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42333,6 +42333,7 @@ server=/huiurl.com/114.114.114.114
 server=/huivo.com/114.114.114.114
 server=/huiwang.net/114.114.114.114
 server=/huiwenda.com/114.114.114.114
+server=/huiwenjidian.com/114.114.114.114
 server=/huiwo.com/114.114.114.114
 server=/huiword.com/114.114.114.114
 server=/huiwww.com/114.114.114.114
