--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14748,6 +14748,7 @@ server=/bizsn.com/114.114.114.114
 server=/bizsofts.com/114.114.114.114
 server=/bizvane.com/114.114.114.114
 server=/bj-big.com/114.114.114.114
+server=/bj-bpsc.com/114.114.114.114
 server=/bj-brsf.com/114.114.114.114
 server=/bj-bts.com/114.114.114.114
 server=/bj-byjz.com/114.114.114.114
