accelerated-domains: add baaniarts.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12502,6 +12502,7 @@ server=/ba-li.com/114.114.114.114
 server=/ba7jcm.live/114.114.114.114
 server=/baacloud32.com/114.114.114.114
 server=/baalchina.net/114.114.114.114
+server=/baaniarts.com/114.114.114.114
 server=/baba-blog.com/114.114.114.114
 server=/bababian.com/114.114.114.114
 server=/bababus.com/114.114.114.114
