accelerated-domains: add dfcentury.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24856,6 +24856,7 @@ server=/df81.com/114.114.114.114
 server=/df9377.com/114.114.114.114
 server=/df962388.com/114.114.114.114
 server=/dfan4.icu/114.114.114.114
+server=/dfcentury.com/114.114.114.114
 server=/dfcfs.com/114.114.114.114
 server=/dfcfw.com/114.114.114.114
 server=/dfcms.net/114.114.114.114
