accelerated-domains: add bccoder.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13449,6 +13449,7 @@ server=/bcbvi.com/114.114.114.114
 server=/bccastle.com/114.114.114.114
 server=/bccn.net/114.114.114.114
 server=/bccnsoft.com/114.114.114.114
+server=/bccoder.com/114.114.114.114
 server=/bccv.com/114.114.114.114
 server=/bcdaren.com/114.114.114.114
 server=/bcdy.net/114.114.114.114
