--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24621,6 +24621,7 @@ server=/deerex.com/114.114.114.114
 server=/deerjet.com/114.114.114.114
 server=/deerma.com/114.114.114.114
 server=/deernice.com/114.114.114.114
+server=/deexchina.com/114.114.114.114
 server=/defcoding.com/114.114.114.114
 server=/defineabc.com/114.114.114.114
 server=/deflw.com/114.114.114.114
