--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38099,6 +38099,7 @@ server=/hanpian.tv/114.114.114.114
 server=/hanpokou.com/114.114.114.114
 server=/hanqidq.com/114.114.114.114
 server=/hanqinghb.com/114.114.114.114
+server=/hanrunbt.com/114.114.114.114
 server=/hansaoxinxi.xyz/114.114.114.114
 server=/hanschen.site/114.114.114.114
 server=/hansetile.com/114.114.114.114
