accelerated-domains: add bdfyst.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13533,6 +13533,7 @@ server=/bdf2.com/114.114.114.114
 server=/bdfczx.com/114.114.114.114
 server=/bdfmj.com/114.114.114.114
 server=/bdfmkj.com/114.114.114.114
+server=/bdfyst.com/114.114.114.114
 server=/bdfzcd.net/114.114.114.114
 server=/bdg-brain.com/114.114.114.114
 server=/bdgamelive.com/114.114.114.114
