--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62057,6 +62057,7 @@ server=/ntqfdq.com/114.114.114.114
 server=/ntrc.com/114.114.114.114
 server=/ntrcb.com/114.114.114.114
 server=/ntrun.com/114.114.114.114
+server=/ntsanta.com/114.114.114.114
 server=/ntsgx.com/114.114.114.114
 server=/ntsuye.com/114.114.114.114
 server=/nttui.com/114.114.114.114
