--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80462,6 +80462,7 @@ server=/uni-perfect.com/114.114.114.114
 server=/uni-ubi.com/114.114.114.114
 server=/unibeauty.net/114.114.114.114
 server=/unibizp.com/114.114.114.114
+server=/unicash-icm.com/114.114.114.114
 server=/unicde.com/114.114.114.114
 server=/unicloud.com/114.114.114.114
 server=/unicloudgov.com/114.114.114.114
