--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98304,6 +98304,7 @@ server=/zykjgame.com/114.114.114.114
 server=/zyks-lv.com/114.114.114.114
 server=/zyku.net/114.114.114.114
 server=/zyl.me/114.114.114.114
+server=/zylseo.com/114.114.114.114
 server=/zymc1.com/114.114.114.114
 server=/zymkcdn.com/114.114.114.114
 server=/zymreal.com/114.114.114.114
