--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41937,6 +41937,7 @@ server=/huas.co/114.114.114.114
 server=/huash.com/114.114.114.114
 server=/huashangcbbtv.com/114.114.114.114
 server=/huashangtop.com/114.114.114.114
+server=/huashanxin.com/114.114.114.114
 server=/huashen-edu.com/114.114.114.114
 server=/huasheng100.com/114.114.114.114
 server=/huashengchn.com/114.114.114.114
