accelerated-domains: add huishouicxinpian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42312,6 +42312,7 @@ server=/huishida.com/114.114.114.114
 server=/huishou1680.com/114.114.114.114
 server=/huishoubao.com/114.114.114.114
 server=/huishoubaojiadan.com/114.114.114.114
+server=/huishouicxinpian.com/114.114.114.114
 server=/huishoujiuwu.com/114.114.114.114
 server=/huishoushang.com/114.114.114.114
 server=/huishuaka.com/114.114.114.114
