--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53477,6 +53477,7 @@ server=/liandaquan.com/114.114.114.114
 server=/liande.cc/114.114.114.114
 server=/lianezs.com/114.114.114.114
 server=/lianfawy.com/114.114.114.114
+server=/lianfengqy.com/114.114.114.114
 server=/lianfengwh.com/114.114.114.114
 server=/liang520.com/114.114.114.114
 server=/liangankeji.com/114.114.114.114
