accelerated-domains: add taoruinyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76804,6 +76804,7 @@ server=/taoqian123.com/114.114.114.114
 server=/taoqizu.com/114.114.114.114
 server=/taoquanquan.com/114.114.114.114
 server=/taor.work/114.114.114.114
+server=/taoruinyuan.com/114.114.114.114
 server=/taosaas.com/114.114.114.114
 server=/taosdata.com/114.114.114.114
 server=/taosha.club/114.114.114.114
