--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23909,6 +23909,7 @@ server=/dan-sing.com/114.114.114.114
 server=/dan8gui.com/114.114.114.114
 server=/danaicha.com/114.114.114.114
 server=/danale.com/114.114.114.114
+server=/danalli.com/114.114.114.114
 server=/danaqsy.com/114.114.114.114
 server=/danbagui.com/114.114.114.114
 server=/danbaodan.com/114.114.114.114
