accelerated-domains: add sofa-webbing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73846,6 +73846,7 @@ server=/sodion.net/114.114.114.114
 server=/sodocloud.com/114.114.114.114
 server=/sody123.com/114.114.114.114
 server=/soeasysdk.com/114.114.114.114
+server=/sofa-webbing.com/114.114.114.114
 server=/sofabiao.com/114.114.114.114
 server=/sofan.one/114.114.114.114
 server=/sofang.com/114.114.114.114
