accelerated-domains: add jr-mjg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48752,6 +48752,7 @@ server=/jqzhuangshi.com/114.114.114.114
 server=/jqzjop.com/114.114.114.114
 server=/jqzplat.com/114.114.114.114
 server=/jqzw.com/114.114.114.114
+server=/jr-mjg.com/114.114.114.114
 server=/jr-soft.com/114.114.114.114
 server=/jr123.com/114.114.114.114
 server=/jr18.com/114.114.114.114
