accelerated-domains: add ecoh-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27847,6 +27847,7 @@ server=/eco-system.xyz/114.114.114.114
 server=/ecoalchina.com/114.114.114.114
 server=/ecocn.org/114.114.114.114
 server=/ecodreamers.com/114.114.114.114
+server=/ecoh-china.com/114.114.114.114
 server=/ecolesenet.com/114.114.114.114
 server=/ecoliving168.com/114.114.114.114
 server=/ecom-lightapp.com/114.114.114.114
