--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77364,6 +77364,7 @@ server=/tenxcloud.net/114.114.114.114
 server=/teown.com/114.114.114.114
 server=/tepcb.com/114.114.114.114
 server=/tepin.hk/114.114.114.114
+server=/tepzg.com/114.114.114.114
 server=/tequanma.com/114.114.114.114
 server=/terabuy.com/114.114.114.114
 server=/terapines.com/114.114.114.114
