--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21748,6 +21748,7 @@ server=/cnwtn.com/114.114.114.114
 server=/cnwuye.com/114.114.114.114
 server=/cnww1985.com/114.114.114.114
 server=/cnwxw.com/114.114.114.114
+server=/cnx8.com/114.114.114.114
 server=/cnxad.com/114.114.114.114
 server=/cnxcjt.com/114.114.114.114
 server=/cnxclm.com/114.114.114.114
