accelerated-domains: add cvmassageocs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23186,6 +23186,7 @@ server=/cvicse.com/114.114.114.114
 server=/cvicseks.com/114.114.114.114
 server=/cvillazc.com/114.114.114.114
 server=/cvmart.net/114.114.114.114
+server=/cvmassageocs.com/114.114.114.114
 server=/cvn-china.com/114.114.114.114
 server=/cvoit.com/114.114.114.114
 server=/cvonet.com/114.114.114.114
