--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88623,6 +88623,7 @@ server=/xn--eqrt2g.xn--vuq861b/114.114.114.114
 server=/xn--estx4tcsdff9qu37dl78b.com/114.114.114.114
 server=/xn--f5q14tug.xn--6qq986b3xl/114.114.114.114
 server=/xn--f8qs4ctu19zr2eq64ehfmdri.xn--3ds443g/114.114.114.114
+server=/xn--fcs316auqlyoe.com/114.114.114.114
 server=/xn--fhqpn19bl91acha222foe2d.xn--3ds443g/114.114.114.114
 server=/xn--fiq03fftg7m2c.com/114.114.114.114
 server=/xn--fiq06jqoz14s.com/114.114.114.114
