--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2976,6 +2976,7 @@ server=/2gdt.com/114.114.114.114
 server=/2gei.com/114.114.114.114
 server=/2girls1finger.org/114.114.114.114
 server=/2google.com/114.114.114.114
+server=/2h1jeo.com/114.114.114.114
 server=/2haha.com/114.114.114.114
 server=/2haitao.com/114.114.114.114
 server=/2handsmt.com/114.114.114.114
