--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97816,6 +97816,7 @@ server=/zt1f.com/114.114.114.114
 server=/ztautoparts.com/114.114.114.114
 server=/ztbeijixing.com/114.114.114.114
 server=/ztbest.com/114.114.114.114
+server=/ztbjygs.com/114.114.114.114
 server=/ztcadx.com/114.114.114.114
 server=/ztcdata.com/114.114.114.114
 server=/ztcexam.com/114.114.114.114
