--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10377,6 +10377,7 @@ server=/akuziti.com/114.114.114.114
 server=/akylq.com/114.114.114.114
 server=/akymmzs.com/114.114.114.114
 server=/al-jin.com/114.114.114.114
+server=/al-volto.com/114.114.114.114
 server=/al8l.com/114.114.114.114
 server=/alabmed.com/114.114.114.114
 server=/alaboshuiyan.com/114.114.114.114
