--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25220,6 +25220,7 @@ server=/dianshang.com/114.114.114.114
 server=/dianshanghy.com/114.114.114.114
 server=/dianshangmulu.com/114.114.114.114
 server=/dianshangyi.com/114.114.114.114
+server=/dianshefloor.com/114.114.114.114
 server=/dianshi.com/114.114.114.114
 server=/dianshige.com/114.114.114.114
 server=/dianshihome.com/114.114.114.114
