accelerated-domains: add lzdxb888.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55967,6 +55967,7 @@ server=/lzdql.com/114.114.114.114
 server=/lzdsmy.com/114.114.114.114
 server=/lzdsqcysgs.com/114.114.114.114
 server=/lzdsyy.com/114.114.114.114
+server=/lzdxb888.com/114.114.114.114
 server=/lzdxdyyy.com/114.114.114.114
 server=/lzdymy.com/114.114.114.114
 server=/lzdyyy.com/114.114.114.114
