--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63438,6 +63438,7 @@ server=/paide.net/114.114.114.114
 server=/paidsurveyhq.com/114.114.114.114
 server=/paidui.com/114.114.114.114
 server=/paiduidai.com/114.114.114.114
+server=/paigechenaultevents.com/114.114.114.114
 server=/paigepian.com/114.114.114.114
 server=/paihang114.com/114.114.114.114
 server=/paihang360.com/114.114.114.114
