--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76826,6 +76826,7 @@ server=/taoshouyou.com/114.114.114.114
 server=/taoshu.com/114.114.114.114
 server=/taoshudang.com/114.114.114.114
 server=/taosj.com/114.114.114.114
+server=/taotae.com/114.114.114.114
 server=/taotao.com/114.114.114.114
 server=/taotaocar.com/114.114.114.114
 server=/taotaogeren.xyz/114.114.114.114
