--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27,6 +27,7 @@ server=/001u.com/114.114.114.114
 server=/001wifi.com/114.114.114.114
 server=/002049.com/114.114.114.114
 server=/00257.com/114.114.114.114
+server=/002574.com/114.114.114.114
 server=/002lzj.com/114.114.114.114
 server=/0033.com/114.114.114.114
 server=/0037wan.com/114.114.114.114
