accelerated-domains: add fm6.icu

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30846,6 +30846,7 @@ server=/fm120.com/114.114.114.114
 server=/fm3838.com/114.114.114.114
 server=/fm4399.com/114.114.114.114
 server=/fm520.com/114.114.114.114
+server=/fm6.icu/114.114.114.114
 server=/fm6w.com/114.114.114.114
 server=/fm918.net/114.114.114.114
 server=/fm960.net/114.114.114.114
