--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88669,6 +88669,7 @@ server=/xn--h6qyr29eh1buxk3e37mxzkp28b2b8c.xn--3ds443g/114.114.114.114
 server=/xn--hdc1eb8be0au3c9hfb.xn--gecrj9c/114.114.114.114
 server=/xn--hutn94av9amzg.net/114.114.114.114
 server=/xn--i6q33br88fkud.com/114.114.114.114
+server=/xn--igt225itqf.com/114.114.114.114
 server=/xn--iiqs04a411ac1w.xn--czr694b/114.114.114.114
 server=/xn--io0a7i/114.114.114.114
 server=/xn--jh1a128b.com/114.114.114.114
