--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73717,6 +73717,7 @@ server=/smzrmyy.com/114.114.114.114
 server=/smzwgk.com/114.114.114.114
 server=/smzy.com/114.114.114.114
 server=/sn-epe.com/114.114.114.114
+server=/sn511.com/114.114.114.114
 server=/snai.edu/114.114.114.114
 server=/snail.com/114.114.114.114
 server=/snail007.com/114.114.114.114
