--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22301,6 +22301,7 @@ server=/cpiccdn.com/114.114.114.114
 server=/cpicfunds.com/114.114.114.114
 server=/cpihualai.com/114.114.114.114
 server=/cpitsh.org/114.114.114.114
+server=/cpixe.com/114.114.114.114
 server=/cpjltx.com/114.114.114.114
 server=/cplamc.com/114.114.114.114
 server=/cpm1000.com/114.114.114.114
