--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62203,6 +62203,7 @@ server=/nwdlink.com/114.114.114.114
 server=/nwell.net/114.114.114.114
 server=/nweon.com/114.114.114.114
 server=/nwshotel.com/114.114.114.114
+server=/nwswn.com/114.114.114.114
 server=/nx-sc.com/114.114.114.114
 server=/nx.cm/114.114.114.114
 server=/nx5.com/114.114.114.114
