--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71688,6 +71688,7 @@ server=/shenquol.com/114.114.114.114
 server=/shenrongda.com/114.114.114.114
 server=/shenrongjidian.com/114.114.114.114
 server=/shenruan.org/114.114.114.114
+server=/shenruapp.com/114.114.114.114
 server=/shenshi-pen.com/114.114.114.114
 server=/shenshi777.com/114.114.114.114
 server=/shenshiads.com/114.114.114.114
