--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69215,6 +69215,7 @@ server=/ruienkj.com/114.114.114.114
 server=/ruifang-tech.com/114.114.114.114
 server=/ruifengdisplay.com/114.114.114.114
 server=/ruifengjk.com/114.114.114.114
+server=/ruifengzhaoming.com/114.114.114.114
 server=/ruifuwatch.com/114.114.114.114
 server=/ruige.com/114.114.114.114
 server=/ruigedf.com/114.114.114.114
