accelerated-domains: add wixdigital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84358,6 +84358,7 @@ server=/witspring.com/114.114.114.114
 server=/wityx.com/114.114.114.114
 server=/wiwide.com/114.114.114.114
 server=/wiwide.net/114.114.114.114
+server=/wixdigital.com/114.114.114.114
 server=/wiyun.com/114.114.114.114
 server=/wiz03.com/114.114.114.114
 server=/wj-chem.com/114.114.114.114
