accelerated-domains: add fs-yld.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31239,6 +31239,7 @@ server=/fs-ade.com/114.114.114.114
 server=/fs-bus.com/114.114.114.114
 server=/fs-czx.com/114.114.114.114
 server=/fs-eliza.com/114.114.114.114
+server=/fs-yld.net/114.114.114.114
 server=/fs.microsoft.com/114.114.114.114
 server=/fs0757.com/114.114.114.114
 server=/fs121.com/114.114.114.114
