accelerated-domains: add bfsmy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14079,6 +14079,7 @@ server=/bfqifu.com/114.114.114.114
 server=/bfqqsg.com/114.114.114.114
 server=/bfqtchayuan.com/114.114.114.114
 server=/bfsea.xyz/114.114.114.114
+server=/bfsmy.com/114.114.114.114
 server=/bfssj.com/114.114.114.114
 server=/bfsu-artery.net/114.114.114.114
 server=/bfsutw.com/114.114.114.114
