--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59258,6 +59258,7 @@ server=/mtex.work/114.114.114.114
 server=/mtfpos.com/114.114.114.114
 server=/mtgchina.com/114.114.114.114
 server=/mtgmcim.com/114.114.114.114
+server=/mthlyp.com/114.114.114.114
 server=/mthreads.com/114.114.114.114
 server=/mti100.com/114.114.114.114
 server=/mtiancity.com/114.114.114.114
