--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22938,6 +22938,7 @@ server=/csxsjc.com/114.114.114.114
 server=/csxww.com/114.114.114.114
 server=/csy17.com/114.114.114.114
 server=/csyestar.com/114.114.114.114
+server=/csygchb.com/114.114.114.114
 server=/csyhsy.com/114.114.114.114
 server=/csylk.com/114.114.114.114
 server=/csyrtcs.com/114.114.114.114
