--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77841,6 +77841,7 @@ server=/tianshanxt.com/114.114.114.114
 server=/tianshengdiyi.com/114.114.114.114
 server=/tianshi2.net/114.114.114.114
 server=/tianshiyiyuan.com/114.114.114.114
+server=/tianshizhisheng.net/114.114.114.114
 server=/tianshugame.com/114.114.114.114
 server=/tianshuge.com/114.114.114.114
 server=/tianshuizhaopin.com/114.114.114.114
