--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11930,6 +11930,7 @@ server=/aspnet.tech/114.114.114.114
 server=/aspsky.net/114.114.114.114
 server=/aspx.cc/114.114.114.114
 server=/aspxhome.com/114.114.114.114
+server=/asqhr.com/114.114.114.114
 server=/asqql.com/114.114.114.114
 server=/asr-cn.com/114.114.114.114
 server=/asrmicro.com/114.114.114.114
