--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60534,6 +60534,7 @@ server=/nettvl.net/114.114.114.114
 server=/netvp.net/114.114.114.114
 server=/networkbench.com/114.114.114.114
 server=/networkesl.com/114.114.114.114
+server=/networklo.com/114.114.114.114
 server=/netzonesoft.com/114.114.114.114
 server=/neu-reality.com/114.114.114.114
 server=/neucrack.com/114.114.114.114
