--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50470,6 +50470,7 @@ server=/kd58.com/114.114.114.114
 server=/kd69.vip/114.114.114.114
 server=/kd9000.com/114.114.114.114
 server=/kdadj.com/114.114.114.114
+server=/kdaole.com/114.114.114.114
 server=/kdatacenter.com/114.114.114.114
 server=/kdatu.com/114.114.114.114
 server=/kdcloud.com/114.114.114.114
