accelerated-domains: add ymu4.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92178,6 +92178,7 @@ server=/ymt360.com/114.114.114.114
 server=/ymtc.com/114.114.114.114
 server=/ymtmt.com/114.114.114.114
 server=/ymtnet.com/114.114.114.114
+server=/ymu4.com/114.114.114.114
 server=/ymuuy.com/114.114.114.114
 server=/ymvkt.com/114.114.114.114
 server=/ymwcds.org/114.114.114.114
