accelerated-domains: add imisfits.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44690,6 +44690,7 @@ server=/imiker.com/114.114.114.114
 server=/imile-inc.com/114.114.114.114
 server=/imindmap.cc/114.114.114.114
 server=/iminisd.com/114.114.114.114
+server=/imisfits.xyz/114.114.114.114
 server=/imitui.com/114.114.114.114
 server=/imixpark.com/114.114.114.114
 server=/imjiayin.com/114.114.114.114
