accelerated-domains: add kurtizanki-spb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51888,6 +51888,7 @@ server=/kurogames-global.com/114.114.114.114
 server=/kurogames.com/114.114.114.114
 server=/kurokingdom.com/114.114.114.114
 server=/kuroko.info/114.114.114.114
+server=/kurtizanki-spb.com/114.114.114.114
 server=/kurz-sh.com/114.114.114.114
 server=/kusdk.com/114.114.114.114
 server=/kushanfudaojixie.com/114.114.114.114
