accelerated-domains: add uuiop.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80910,6 +80910,7 @@ server=/uuhdedu.com/114.114.114.114
 server=/uuhimalayanqm.com/114.114.114.114
 server=/uuid.online/114.114.114.114
 server=/uuimg.com/114.114.114.114
+server=/uuiop.com/114.114.114.114
 server=/uukkuu.com/114.114.114.114
 server=/uuliaoning.com/114.114.114.114
 server=/uulucky.com/114.114.114.114
