--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94526,6 +94526,7 @@ server=/z2ehospital.com/114.114.114.114
 server=/z2sci.com/114.114.114.114
 server=/z2u.tv/114.114.114.114
 server=/z316.com/114.114.114.114
+server=/z318.com/114.114.114.114
 server=/z3quant.com/114.114.114.114
 server=/z3zex.icu/114.114.114.114
 server=/z574.com/114.114.114.114
