accelerated-domains: add nnlbsh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61566,6 +61566,7 @@ server=/nnkin.com/114.114.114.114
 server=/nnkqfs.com/114.114.114.114
 server=/nnkxnz.com/114.114.114.114
 server=/nnlanfang.com/114.114.114.114
+server=/nnlbsh.com/114.114.114.114
 server=/nnlfcm.com/114.114.114.114
 server=/nnlghbkj.com/114.114.114.114
 server=/nnlgjt.com/114.114.114.114
