--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46758,6 +46758,7 @@ server=/jhwvjjw.com/114.114.114.114
 server=/jhxcms.com/114.114.114.114
 server=/jhxl.org/114.114.114.114
 server=/jhxms.com/114.114.114.114
+server=/jhxs1688.com/114.114.114.114
 server=/jhydns05.com/114.114.114.114
 server=/jhygame.com/114.114.114.114
 server=/jhyhf.com/114.114.114.114
