--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24532,6 +24532,7 @@ server=/dduwork.com/114.114.114.114
 server=/ddvaj.com/114.114.114.114
 server=/ddweilai.com/114.114.114.114
 server=/ddwhm.com/114.114.114.114
+server=/ddxhx.com/114.114.114.114
 server=/ddxhyl.com/114.114.114.114
 server=/ddxq.mobi/114.114.114.114
 server=/ddxs.cc/114.114.114.114
