accelerated-domains: add lzyhny.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56158,6 +56158,7 @@ server=/lzygpm.com/114.114.114.114
 server=/lzyhcy.com/114.114.114.114
 server=/lzyhdyf.com/114.114.114.114
 server=/lzyhjg.com/114.114.114.114
+server=/lzyhny.com/114.114.114.114
 server=/lzyingyu.com/114.114.114.114
 server=/lzyisheng.com/114.114.114.114
 server=/lzyizhu.com/114.114.114.114
