--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80511,6 +80511,7 @@ server=/ungifts.com/114.114.114.114
 server=/uni-forest.com/114.114.114.114
 server=/uni-perfect.com/114.114.114.114
 server=/uni-ubi.com/114.114.114.114
+server=/uniaipdz.com/114.114.114.114
 server=/unibeauty.net/114.114.114.114
 server=/unibizp.com/114.114.114.114
 server=/unicash-icm.com/114.114.114.114
