accelerated-domains: add rxtchp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69432,6 +69432,7 @@ server=/rxkjcn.com/114.114.114.114
 server=/rxljzy.com/114.114.114.114
 server=/rxrwr.com/114.114.114.114
 server=/rxshc.com/114.114.114.114
+server=/rxtchp.com/114.114.114.114
 server=/rxxdny.com/114.114.114.114
 server=/rxyjqz.com/114.114.114.114
 server=/rxykamto.com/114.114.114.114
