accelerated-domains: add gxminglian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36253,6 +36253,7 @@ server=/gxmetalking.com/114.114.114.114
 server=/gxmggg.com/114.114.114.114
 server=/gxmiao.com/114.114.114.114
 server=/gxmiaoshu.com/114.114.114.114
+server=/gxminglian.com/114.114.114.114
 server=/gxmingshi.com/114.114.114.114
 server=/gxmingyun.com/114.114.114.114
 server=/gxmj.org/114.114.114.114
