accelerated-domains: add allfoodsg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10741,6 +10741,7 @@ server=/alldragon.com/114.114.114.114
 server=/alleadprint.com/114.114.114.114
 server=/allenmarket.com/114.114.114.114
 server=/allfang.com/114.114.114.114
+server=/allfoodsg.com/114.114.114.114
 server=/allfootballapp.com/114.114.114.114
 server=/allfromspain.com/114.114.114.114
 server=/allfunnies.com/114.114.114.114
