--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86144,6 +86144,7 @@ server=/xbjob.com/114.114.114.114
 server=/xbjtkj.com/114.114.114.114
 server=/xbkjvip.com/114.114.114.114
 server=/xblds.com/114.114.114.114
+server=/xblou.com/114.114.114.114
 server=/xblqb.com/114.114.114.114
 server=/xblyw.com/114.114.114.114
 server=/xbmbw.com/114.114.114.114
