accelerated-domains: add sqlsp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74455,6 +74455,7 @@ server=/sqkb.com/114.114.114.114
 server=/sql110.com/114.114.114.114
 server=/sqlpub.com/114.114.114.114
 server=/sqlsec.com/114.114.114.114
+server=/sqlsp.com/114.114.114.114
 server=/sqmarathon.com/114.114.114.114
 server=/sqncsx.com/114.114.114.114
 server=/sqphb.com/114.114.114.114
