accelerated-domains: add qjrcj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66744,6 +66744,7 @@ server=/qjmotor.com/114.114.114.114
 server=/qjnice.com/114.114.114.114
 server=/qjr.cc/114.114.114.114
 server=/qjrc.com/114.114.114.114
+server=/qjrcj.com/114.114.114.114
 server=/qjren.com/114.114.114.114
 server=/qjsb88.com/114.114.114.114
 server=/qjslngy.com/114.114.114.114
