accelerated-domains: add zhonghangzixun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96221,6 +96221,7 @@ server=/zhongguoss.com/114.114.114.114
 server=/zhongguowangshi.com/114.114.114.114
 server=/zhongguoym.com/114.114.114.114
 server=/zhonghaitech.com/114.114.114.114
+server=/zhonghangzixun.com/114.114.114.114
 server=/zhonghaojituan.com/114.114.114.114
 server=/zhonghe58.com/114.114.114.114
 server=/zhonghegame.com/114.114.114.114
