--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50447,6 +50447,7 @@ server=/kbyun.com/114.114.114.114
 server=/kbzs88.com/114.114.114.114
 server=/kc0011.net/114.114.114.114
 server=/kc87.com/114.114.114.114
+server=/kcaiwu.com/114.114.114.114
 server=/kcbebank.com/114.114.114.114
 server=/kccidc.com/114.114.114.114
 server=/kcdn0.com/114.114.114.114
