--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24153,6 +24153,7 @@ server=/dassm.com/114.114.114.114
 server=/dasung.com/114.114.114.114
 server=/dasungtech.com/114.114.114.114
 server=/dat881.com/114.114.114.114
+server=/data-speaker.com/114.114.114.114
 server=/data380.com/114.114.114.114
 server=/data4h.com/114.114.114.114
 server=/data5u.com/114.114.114.114
