--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70401,6 +70401,7 @@ server=/sdgwy.org/114.114.114.114
 server=/sdhbcl.com/114.114.114.114
 server=/sdhdssd.com/114.114.114.114
 server=/sdhfsh.com/114.114.114.114
+server=/sdhhiso.com/114.114.114.114
 server=/sdhljykj.com/114.114.114.114
 server=/sdhoukang.com/114.114.114.114
 server=/sdhsg.com/114.114.114.114
