accelerated-domains: add qxtongcheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67777,6 +67777,7 @@ server=/qxsdq.com/114.114.114.114
 server=/qxsfjq.com/114.114.114.114
 server=/qxswk.com/114.114.114.114
 server=/qxteacher.com/114.114.114.114
+server=/qxtongcheng.com/114.114.114.114
 server=/qxtour.com/114.114.114.114
 server=/qxtxt.com/114.114.114.114
 server=/qxueyou.com/114.114.114.114
