--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79264,6 +79264,7 @@ server=/tsluping.com/114.114.114.114
 server=/tsm-yuntrust.com/114.114.114.114
 server=/tsm52dc.com/114.114.114.114
 server=/tsmgc.com/114.114.114.114
+server=/tsmlpxxx.com/114.114.114.114
 server=/tsmtkj.com/114.114.114.114
 server=/tsorder.com/114.114.114.114
 server=/tsp-system.com/114.114.114.114
