--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19584,6 +19584,7 @@ server=/chinapaper.net/114.114.114.114
 server=/chinapastel.com/114.114.114.114
 server=/chinapay.com/114.114.114.114
 server=/chinapayhongkong.com/114.114.114.114
+server=/chinapbw.com/114.114.114.114
 server=/chinape168.com/114.114.114.114
 server=/chinapeelingmachine.com/114.114.114.114
 server=/chinapeier.com/114.114.114.114
