accelerated-domains: add worldbearingshub.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84871,6 +84871,7 @@ server=/world-audio.com/114.114.114.114
 server=/world-fireworks.com/114.114.114.114
 server=/world68.com/114.114.114.114
 server=/worldbangmai.com/114.114.114.114
+server=/worldbearingshub.com/114.114.114.114
 server=/worldbuy.cc/114.114.114.114
 server=/worldcps.com/114.114.114.114
 server=/worldfcdn.com/114.114.114.114
