accelerated-domains: add weixun998.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83383,6 +83383,7 @@ server=/weixjn.com/114.114.114.114
 server=/weixue100.com/114.114.114.114
 server=/weixueyuan.net/114.114.114.114
 server=/weixun.com/114.114.114.114
+server=/weixun998.com/114.114.114.114
 server=/weixuncj.com/114.114.114.114
 server=/weixunlogin.com/114.114.114.114
 server=/weixunyunduan.net/114.114.114.114
