--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9418,6 +9418,7 @@ server=/adtxl.com/114.114.114.114
 server=/aduan.cc/114.114.114.114
 server=/adubest.com/114.114.114.114
 server=/adukwai.com/114.114.114.114
+server=/adult-stem-cells.com/114.114.114.114
 server=/adunicorn.com/114.114.114.114
 server=/adunioncode.com/114.114.114.114
 server=/adunite.com/114.114.114.114
