--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39181,6 +39181,7 @@ server=/hebbr.com/114.114.114.114
 server=/hebca.com/114.114.114.114
 server=/hebcar.com/114.114.114.114
 server=/hebdsmn.com/114.114.114.114
+server=/hebdtp.com/114.114.114.114
 server=/hebei.cm/114.114.114.114
 server=/hebeibiaoqing.com/114.114.114.114
 server=/hebeieb.com/114.114.114.114
