accelerated-domains: add tjzhyj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78324,6 +78324,7 @@ server=/tjzb.com/114.114.114.114
 server=/tjzcsj.com/114.114.114.114
 server=/tjzfcg.com/114.114.114.114
 server=/tjzhongyiyao.com/114.114.114.114
+server=/tjzhyj.com/114.114.114.114
 server=/tjzyec.com/114.114.114.114
 server=/tjzyefy.com/114.114.114.114
 server=/tjzyfw.com/114.114.114.114
