--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8225,6 +8225,7 @@ server=/92le.com/114.114.114.114
 server=/92lm.com/114.114.114.114
 server=/92lucky.com/114.114.114.114
 server=/92mp.com/114.114.114.114
+server=/92mtnnn.com/114.114.114.114
 server=/92ni.com/114.114.114.114
 server=/92shuoshuo.com/114.114.114.114
 server=/92sucai.com/114.114.114.114
