--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59224,6 +59224,7 @@ server=/mslzk.com/114.114.114.114
 server=/msm.moe/114.114.114.114
 server=/msmartlife.com/114.114.114.114
 server=/msmbjp.com/114.114.114.114
+server=/msmushen.com/114.114.114.114
 server=/msndvr.com/114.114.114.114
 server=/msolok.com/114.114.114.114
 server=/mspacecd.com/114.114.114.114
