--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91303,6 +91303,7 @@ server=/yijimaoyi.com/114.114.114.114
 server=/yijingji.com/114.114.114.114
 server=/yijintong.net/114.114.114.114
 server=/yijirecovery.com/114.114.114.114
+server=/yijiudongsheng.com/114.114.114.114
 server=/yijiupi.com/114.114.114.114
 server=/yijiuplus.com/114.114.114.114
 server=/yijueweb.com/114.114.114.114
