--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29747,6 +29747,7 @@ server=/fapharm.com/114.114.114.114
 server=/fapiao.com/114.114.114.114
 server=/fapiao365.com/114.114.114.114
 server=/fapiaobang.com/114.114.114.114
+server=/fapiaoqingdao.com/114.114.114.114
 server=/fapping.club/114.114.114.114
 server=/fapselc.com/114.114.114.114
 server=/faqianjia.com/114.114.114.114
