--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30643,6 +30643,7 @@ server=/fjgwy.org/114.114.114.114
 server=/fjhaitusc.com/114.114.114.114
 server=/fjhcw.com/114.114.114.114
 server=/fjhospital.com/114.114.114.114
+server=/fjhsjg.com/114.114.114.114
 server=/fjhxbank.com/114.114.114.114
 server=/fjhxcaee.com/114.114.114.114
 server=/fjii.com/114.114.114.114
