--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13456,6 +13456,7 @@ server=/bbzxky.fun/114.114.114.114
 server=/bc966.com/114.114.114.114
 server=/bcactc.com/114.114.114.114
 server=/bcb5.com/114.114.114.114
+server=/bcbksbx.com/114.114.114.114
 server=/bcbpm.com/114.114.114.114
 server=/bcbvi.com/114.114.114.114
 server=/bccastle.com/114.114.114.114
