accelerated-domains: add fnsbqvz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30916,6 +30916,7 @@ server=/fnnspa.com/114.114.114.114
 server=/fnos.net/114.114.114.114
 server=/fnrcw.com/114.114.114.114
 server=/fnrczp.com/114.114.114.114
+server=/fnsbqvz.com/114.114.114.114
 server=/fnscore.com/114.114.114.114
 server=/fntbp.com/114.114.114.114
 server=/fnvip100.com/114.114.114.114
