--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60876,6 +60876,7 @@ server=/niegobrand.com/114.114.114.114
 server=/niegoweb.com/114.114.114.114
 server=/nielsenccdata.tv/114.114.114.114
 server=/nies.org/114.114.114.114
+server=/nietou.com/114.114.114.114
 server=/niexiaotao.com/114.114.114.114
 server=/nieyou.com/114.114.114.114
 server=/nifengz.com/114.114.114.114
