accelerated-domains: add ivvui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45861,6 +45861,7 @@ server=/ivsky.com/114.114.114.114
 server=/ivtfx.com/114.114.114.114
 server=/ivu4e.com/114.114.114.114
 server=/ivvajob.com/114.114.114.114
+server=/ivvui.com/114.114.114.114
 server=/ivwen.com/114.114.114.114
 server=/ivxiaoyuan.com/114.114.114.114
 server=/ivy-school.org/114.114.114.114
