accelerated-domains: add huabeishiyou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41705,6 +41705,7 @@ server=/huabaolou.com/114.114.114.114
 server=/huabbao.com/114.114.114.114
 server=/huabeicw.com/114.114.114.114
 server=/huabeipay.com/114.114.114.114
+server=/huabeishiyou.com/114.114.114.114
 server=/huabian.com/114.114.114.114
 server=/huabianyl.com/114.114.114.114
 server=/huabo.net/114.114.114.114
