accelerated-domains: add chuangziran.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20129,6 +20129,7 @@ server=/chuangyisai.com/114.114.114.114
 server=/chuangyiwh.com/114.114.114.114
 server=/chuangyouqi.com/114.114.114.114
 server=/chuangzaoshi.com/114.114.114.114
+server=/chuangziran.com/114.114.114.114
 server=/chuanhai.net/114.114.114.114
 server=/chuanjiaoban.com/114.114.114.114
 server=/chuanjie.vip/114.114.114.114
