--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16161,6 +16161,7 @@ server=/build9s.io/114.114.114.114
 server=/buildface.com/114.114.114.114
 server=/buildhr.com/114.114.114.114
 server=/buildjob.net/114.114.114.114
+server=/buildreamstar.com/114.114.114.114
 server=/buildwaterexpo.com/114.114.114.114
 server=/bukamanhua.com/114.114.114.114
 server=/buke999.com/114.114.114.114
