--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97816,6 +97816,7 @@ server=/zsgzc.com/114.114.114.114
 server=/zsh.com/114.114.114.114
 server=/zsh8.com/114.114.114.114
 server=/zshangtai.com/114.114.114.114
+server=/zshc12306.com/114.114.114.114
 server=/zshgsoft.com/114.114.114.114
 server=/zshhjt.com/114.114.114.114
 server=/zshield.net/114.114.114.114
