--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23993,6 +23993,7 @@ server=/daniuguwang.com/114.114.114.114
 server=/daniuit.com/114.114.114.114
 server=/daniujiaoyu.com/114.114.114.114
 server=/daniushiwan.com/114.114.114.114
+server=/daniusxy.com/114.114.114.114
 server=/daniuwangxiao.com/114.114.114.114
 server=/danji100.com/114.114.114.114
 server=/danji8.com/114.114.114.114
