accelerated-domains: add adqpd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9389,6 +9389,7 @@ server=/adpfm513.com/114.114.114.114
 server=/adplusx.com/114.114.114.114
 server=/adpolestar.net/114.114.114.114
 server=/adqkmob.com/114.114.114.114
+server=/adqpd.com/114.114.114.114
 server=/adquan.com/114.114.114.114
 server=/ads8.com/114.114.114.114
 server=/adsage.com/114.114.114.114
