--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53302,6 +53302,7 @@ server=/letsinno.com/114.114.114.114
 server=/letsvisa.com/114.114.114.114
 server=/lettercloud.net/114.114.114.114
 server=/letuinet.com/114.114.114.114
+server=/letuixiaokefu.com/114.114.114.114
 server=/letushu.com/114.114.114.114
 server=/letv.com/114.114.114.114
 server=/letv8.com/114.114.114.114
