--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39161,6 +39161,7 @@ server=/he-one.com/114.114.114.114
 server=/he1j.com/114.114.114.114
 server=/he29.com/114.114.114.114
 server=/he2d.com/114.114.114.114
+server=/he8k.com/114.114.114.114
 server=/heacn.net/114.114.114.114
 server=/head-way.com/114.114.114.114
 server=/headconsultant.com/114.114.114.114
