accelerated-domains: add kunnabeila.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51884,6 +51884,7 @@ server=/kunlunwe.com/114.114.114.114
 server=/kunlunxin.com/114.114.114.114
 server=/kunmingbc.com/114.114.114.114
 server=/kunmingkanghui.com/114.114.114.114
+server=/kunnabeila.com/114.114.114.114
 server=/kunpengtn.com/114.114.114.114
 server=/kunpo.cc/114.114.114.114
 server=/kunst-x.com/114.114.114.114
