accelerated-domains: add african-styles.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9532,6 +9532,7 @@ server=/afjk.com/114.114.114.114
 server=/afjob88.com/114.114.114.114
 server=/aflink.com/114.114.114.114
 server=/aflytec.com/114.114.114.114
+server=/african-styles.com/114.114.114.114
 server=/africaninfolook.com/114.114.114.114
 server=/afriendx.com/114.114.114.114
 server=/afrindex.com/114.114.114.114
