accelerated-domains: add lepalacegt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53234,6 +53234,7 @@ server=/leopump.com/114.114.114.114
 server=/leowu.online/114.114.114.114
 server=/leozwang.com/114.114.114.114
 server=/lepaicm.com/114.114.114.114
+server=/lepalacegt.com/114.114.114.114
 server=/lepiaoyun.com/114.114.114.114
 server=/leptv.com/114.114.114.114
 server=/leqi.us/114.114.114.114
