accelerated-domains: add mingguoshi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58162,6 +58162,7 @@ server=/mingfucdn.com/114.114.114.114
 server=/mingfucloud.com/114.114.114.114
 server=/mingfudns.com/114.114.114.114
 server=/mingfuyun.com/114.114.114.114
+server=/mingguoshi.com/114.114.114.114
 server=/minghaoshangwu.com/114.114.114.114
 server=/mingheyaoye.com/114.114.114.114
 server=/mingheyiyao.com/114.114.114.114
