accelerated-domains: add shmhzp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72193,6 +72193,7 @@ server=/shmesun.com/114.114.114.114
 server=/shmet.com/114.114.114.114
 server=/shmetro.com/114.114.114.114
 server=/shmhtv.com/114.114.114.114
+server=/shmhzp.com/114.114.114.114
 server=/shmiaosai.com/114.114.114.114
 server=/shmljm.com/114.114.114.114
 server=/shmog.org/114.114.114.114
