accelerated-domains: add qzkjyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67951,6 +67951,7 @@ server=/qzjzyy002.com/114.114.114.114
 server=/qzkangfu.com/114.114.114.114
 server=/qzkcw.com/114.114.114.114
 server=/qzkey.com/114.114.114.114
+server=/qzkjyy.com/114.114.114.114
 server=/qzktzc.com/114.114.114.114
 server=/qzlanwei.com/114.114.114.114
 server=/qzld.com/114.114.114.114
