accelerated-domains: add ycd-hk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90562,6 +90562,7 @@ server=/yccdl.net/114.114.114.114
 server=/yccdn.com/114.114.114.114
 server=/yccn.cc/114.114.114.114
 server=/ycczkf.com/114.114.114.114
+server=/ycd-hk.com/114.114.114.114
 server=/ycdext.net/114.114.114.114
 server=/ycdongxu.com/114.114.114.114
 server=/ycduile.com/114.114.114.114
