accelerated-domains: add 45thparallelinternetservices.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4317,6 +4317,7 @@ server=/45io.com/114.114.114.114
 server=/45ns.com/114.114.114.114
 server=/45r.com/114.114.114.114
 server=/45te.com/114.114.114.114
+server=/45thparallelinternetservices.com/114.114.114.114
 server=/45win.com/114.114.114.114
 server=/45xie.com/114.114.114.114
 server=/45yx.com/114.114.114.114
