--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93472,6 +93472,7 @@ server=/yuelongdzc168.com/114.114.114.114
 server=/yueloo.com/114.114.114.114
 server=/yuelu.net/114.114.114.114
 server=/yuelun.com/114.114.114.114
+server=/yueluon.com/114.114.114.114
 server=/yuelvxing.com/114.114.114.114
 server=/yueme.tv/114.114.114.114
 server=/yuemei.com/114.114.114.114
