accelerated-domains: add shiftwww.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71923,6 +71923,7 @@ server=/shifendaodu.com/114.114.114.114
 server=/shifendaojia.com/114.114.114.114
 server=/shifeng.com/114.114.114.114
 server=/shifenyuedu.com/114.114.114.114
+server=/shiftwww.com/114.114.114.114
 server=/shigaoshan.com/114.114.114.114
 server=/shige.group/114.114.114.114
 server=/shiguanai.com/114.114.114.114
