accelerated-domains: add zunsf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98086,6 +98086,7 @@ server=/zun.com/114.114.114.114
 server=/zun.gd/114.114.114.114
 server=/zun9.com/114.114.114.114
 server=/zunnou.com/114.114.114.114
+server=/zunsf.com/114.114.114.114
 server=/zunsou.com/114.114.114.114
 server=/zunxiang17.com/114.114.114.114
 server=/zunxun.com/114.114.114.114
