accelerated-domains: add aliadvance.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10440,6 +10440,7 @@ server=/ali-star.com/114.114.114.114
 server=/ali213.com/114.114.114.114
 server=/ali213.net/114.114.114.114
 server=/ali37.net/114.114.114.114
+server=/aliadvance.com/114.114.114.114
 server=/aliagain.com/114.114.114.114
 server=/alianhome.com/114.114.114.114
 server=/aliapp-inc.com/114.114.114.114
