accelerated-domains: add hswzyh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41551,6 +41551,7 @@ server=/hsweb.me/114.114.114.114
 server=/hswkzy.com/114.114.114.114
 server=/hswmb.com/114.114.114.114
 server=/hswyvz.com/114.114.114.114
+server=/hswzyh.com/114.114.114.114
 server=/hsxedu.com/114.114.114.114
 server=/hsxhr.cc/114.114.114.114
 server=/hsxjjs.com/114.114.114.114
