accelerated-domains: add xmzj18.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88584,6 +88584,7 @@ server=/xmzangao.com/114.114.114.114
 server=/xmzdls.com/114.114.114.114
 server=/xmzgxcl.com/114.114.114.114
 server=/xmzhdz.com/114.114.114.114
+server=/xmzj18.com/114.114.114.114
 server=/xmzjjl.com/114.114.114.114
 server=/xmzjtjckmy.com/114.114.114.114
 server=/xmzmmr.com/114.114.114.114
