accelerated-domains: add treesword.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79118,6 +79118,7 @@ server=/travelyee.com/114.114.114.114
 server=/trboli.com/114.114.114.114
 server=/treehousesub.com/114.114.114.114
 server=/treesir.pub/114.114.114.114
+server=/treesword.com/114.114.114.114
 server=/treetwins.com/114.114.114.114
 server=/treeyee.com/114.114.114.114
 server=/treferty33.fun/114.114.114.114
