accelerated-domains: add awfzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12238,6 +12238,7 @@ server=/awemeuglang.com/114.114.114.114
 server=/awemeugsoul.com/114.114.114.114
 server=/awemeugwave.com/114.114.114.114
 server=/awfggc.com/114.114.114.114
+server=/awfzx.com/114.114.114.114
 server=/awhouse.art/114.114.114.114
 server=/awinic.com/114.114.114.114
 server=/awmote.com/114.114.114.114
