accelerated-domains: add mtmyw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59327,6 +59327,7 @@ server=/mtmss.com/114.114.114.114
 server=/mtmssdn.com/114.114.114.114
 server=/mtmssdn0.com/114.114.114.114
 server=/mtmt.tech/114.114.114.114
+server=/mtmyw.com/114.114.114.114
 server=/mtn-db.com/114.114.114.114
 server=/mtnets.com/114.114.114.114
 server=/mtnets.net/114.114.114.114
