accelerated-domains: add wutaidq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85465,6 +85465,7 @@ server=/wusuobuneng.com/114.114.114.114
 server=/wusuobuneng.org/114.114.114.114
 server=/wuta-cam.com/114.114.114.114
 server=/wuta.cc/114.114.114.114
+server=/wutaidq.com/114.114.114.114
 server=/wutaishanfojiao.com/114.114.114.114
 server=/wutanyuhuatan.com/114.114.114.114
 server=/wuteaclub.com/114.114.114.114
