accelerated-domains: add zhongtiancloud.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96362,6 +96362,7 @@ server=/zhongtaipcb.com/114.114.114.114
 server=/zhongtaitrust.com/114.114.114.114
 server=/zhongtaiyitong.com/114.114.114.114
 server=/zhongtefamen.com/114.114.114.114
+server=/zhongtiancloud.com/114.114.114.114
 server=/zhongtieyintong.com/114.114.114.114
 server=/zhongtong.com/114.114.114.114
 server=/zhongtongshe.com/114.114.114.114
