accelerated-domains: add rgznaj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68651,6 +68651,7 @@ server=/rgtygroup.com/114.114.114.114
 server=/rgyh6t.com/114.114.114.114
 server=/rgyun.com/114.114.114.114
 server=/rgzbgroup.hk/114.114.114.114
+server=/rgznaj.com/114.114.114.114
 server=/rh31.com/114.114.114.114
 server=/rh98.com/114.114.114.114
 server=/rhce.cc/114.114.114.114
