accelerated-domains: add lzgkyq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56040,6 +56040,7 @@ server=/lzgbdst.com/114.114.114.114
 server=/lzghmy.com/114.114.114.114
 server=/lzgjcxkj.com/114.114.114.114
 server=/lzgjschool.com/114.114.114.114
+server=/lzgkyq.com/114.114.114.114
 server=/lzgm.com/114.114.114.114
 server=/lzgps.com/114.114.114.114
 server=/lzgryy.com/114.114.114.114
