accelerated-domains: add lcmack.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52841,6 +52841,7 @@ server=/lckeshun.com/114.114.114.114
 server=/lckfb.com/114.114.114.114
 server=/lckiss.com/114.114.114.114
 server=/lcloudcdn.com/114.114.114.114
+server=/lcmack.com/114.114.114.114
 server=/lcmhbl.com/114.114.114.114
 server=/lcmpn.com/114.114.114.114
 server=/lcnichia.com/114.114.114.114
