accelerated-domains: add jinggumofang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47551,6 +47551,7 @@ server=/jinggon.com/114.114.114.114
 server=/jinggu-ag.com/114.114.114.114
 server=/jingguan.ai/114.114.114.114
 server=/jinggui.com/114.114.114.114
+server=/jinggumofang.com/114.114.114.114
 server=/jinghaishop.com/114.114.114.114
 server=/jinghangapps.com/114.114.114.114
 server=/jinghangedu.com/114.114.114.114
